--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/aniestore_database
+spring.datasource.username=khahhann
+spring.datasource.password=10102003
 
+logging.level.root=warn
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=khanhanbui2003@gmail.com
+spring.mail.password=uiwhhvmlflxfqzic
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
