--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/aniestore_database
 spring.datasource.username=khahhann
 spring.datasource.password=10102003
 
-logging.level.root=warn
+#logging.level.root=warn
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
